2011-03-23  George Guo  <George.Guo@nokia.com>

Reviewed by Darin Adler.

        Webkit warning: converting to 'unsigned int' from 'double'
        https://bugs.webkit.org/show_bug.cgi?id=56865

        With -Werr enabled, this cause the build failure on RedHat Linux.
        Add a cast helped.

        * Source/JavaScriptCore/runtime/TimeoutChecker.cpp:
        (JSC::getCPUTime):

Canonical link: https://commits.webkit.org/71627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81803 268f45cc-cd09-0410-ab3c-d52691b4dbfc